# dolfinx_iga

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONDA_SETUP.md  LICENSE  README.md  check_types.py  environment.yml  pyproject.toml  pyproject_minimal.toml  test_cox_de_boor.py
.cursor/: settings.json
.cursor/rules/: 000-project-overview-and-standards.mdc  010-numba-best-practices.mdc
.github/: copilot-instructions.md
docs/: api_reference.md  conf.py  contributing.md  cox_de_boor.md  examples.md  index.md  installation.md  requirements.txt
dolfinx_iga/: __init__.py  _version.py  bspline.py  knots.py  nurbs.py
dolfinx_iga/splines/: basis.py  basis_1D.py  bspline.py  bspline_1D.py  bspline_1D_impl.py  change_basis_1D.py  curve.py  element.py  knots.py  mesh.py  space.py
dolfinx_iga/utils/: __init__.py  basis_functions.py  knot_vector_utils.py  tolerance.py  types.py
examples/: basic_bspline_curve.py  basis_1D_indices.py  dg_lagrange.py  dummy.py  dummy3.py  dummy4.py  dummy5.py  dummy6.py  dummy7.py  dummy8.py  dummy9.py  lagrange_variants_comparison.py  tolerance_utilities_example.py
tests/: conftest.py  dummy_assembler.py  dummy_elasticity.py  dummy_test.py  dummy_test_2D.py  dummy_test_2D_stokes.py  ellipse.py  spline_space.py  test_basis.py  test_basis_1D.py  test_bspline.py  test_bspline_1D.py  test_bspline_1D_impl.py  test_change_basis_1D.py  test_curve.py  test_init.py  test_knots.py  test_nurbs.py  test_spline_element.py  test_spline_space.py  test_tolerance.py  test_utils.py
