[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dolfinx-iga"
description = "Isogeometric Analysis extension for DOLFINx"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pablo Antolin", email = "pablo.antolin@epfl.ch" }]
maintainers = [{ name = "Pablo Antolin", email = "pablo.antolin@epfl.ch" }]
keywords = [
    "finite element",
    "isogeometric analysis",
    "dolfinx",
    "fenics",
    "bspline",
    "nurbs",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    # Note: FEniCS dependencies (fenics-dolfinx, fenics-basix, fenics-ffcx, fenics-ufl) 
    # are only available via conda-forge. Install via:
    # conda install -c conda-forge fenics-dolfinx fenics-basix fenics-ffcx fenics-ufl
]
dynamic = ["version"]

[project.optional-dependencies]
numba = ["numba"]
fenics = [
    # FEniCS dependencies are installed via conda-forge:
    # conda install -c conda-forge fenics-dolfinx fenics-basix fenics-ffcx fenics-ufl
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "sphinx",
    "sphinx-rtd-theme",
    "numba",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
]
test = ["pytest>=6.0", "pytest-cov", "pytest-xdist"]

[project.urls]
Homepage = "https://github.com/pantolin/dolfinx_iga"
Documentation = "https://dolfinx-iga.readthedocs.io/"
Repository = "https://github.com/pantolin/dolfinx_iga.git"
"Bug Tracker" = "https://github.com/pantolin/dolfinx_iga/issues"

[tool.setuptools]
packages = ["dolfinx_iga"]

[tool.setuptools_scm]
write_to = "dolfinx_iga/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["dolfinx_iga"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["dolfinx.*", "basix.*", "ffcx.*", "ufl.*", "numba.*"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
]
